--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-Debug/*
-Release/*
-ipch/*
-String/Debug/*
-String/Release/*
+src/Debug/*
+src/Release/*
+src/ipch/*
+src/String/Debug/*
+src/String/Release/*
 *.sdf
 *.exe
